Removed superfluous footer segments on smaller screens to prevent wrapping

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -102,6 +102,11 @@ body > footer {
     @media (max-width: $break-width) {
         font-size: ceil($main-height * $break-scale);
         line-height: ceil($big-height * $break-scale);
+        
+        .code-related {
+            display: none;
+            visibility: collapse;
+        }
     }
 }
 
